# scalable-llm-finetuning-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base_config.yaml  dpo_config.yaml  lora_config.yaml  qlora_config.yaml
docker/: Dockerfile.eval  Dockerfile.train
scripts/: evaluate_checkpoints.py  launch_distributed_training.sh  merge_adapters.py  run_dpo_training.py
src/: __init__.py
src/data/: __init__.py
src/data/collectors/: __init__.py  api_collector.py  file_loader.py  web_scraper.py
src/data/datasets/: __init__.py  base_dataset.py  instruction_dataset.py  preference_dataset.py
src/data/processors/: __init__.py  augmentation.py  cleaner.py  tokenizer.py
src/data/validators/: __init__.py  deduplicator.py  quality_checker.py
src/deployment/: __init__.py  api_builder.py  model_converter.py  quantizer.py
src/evaluation/: __init__.py
src/evaluation/analysis/: __init__.py  error_analysis.py  visualization.py
src/evaluation/evaluators/: __init__.py  benchmark_suite.py  (+2 more)
src/monitoring/: __init__.py  cost_calculator.py  resource_tracker.py  training_monitor.py
src/training/: __init__.py
src/utils/: __init__.py  checkpoint_manager.py  config_parser.py  distributed_utils.py
tests/data_tests/: test_cleaner.py  test_deduplicator.py  test_preference_dataset.py
tests/integration_tests/: test_config_parser.py
tests/training_tests/: test_configs.py
workflows/: __init__.py
workflows/dags/: __init__.py  data_preparation.py  dpo_pipeline.py  evaluation_pipeline.py  training_pipeline.py
workflows/tasks/: __init__.py
(+21 files in other folders)
