[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project work]
name = "llm-finetuning-pipeline"
version = "1.0.0"
description = "Scalable LLM Fine-tuning Pipeline with distributed training and experiment tracking"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "workflows*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
